[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tools"]

[project]
name = "tools"
version = "0.0.1"
description = "Tools"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
markers = [
    "slow : marks tests as slow (deselect with '-m \"not slow\"')"
]

[tool.black]
line-length = 88
